tests/errors/syn_cases4.java
public class syn_cases4 {
public static void main(String[] args){
switch(args.length){
53 return;
}
}
}